--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "expo": "~37.0.3",
     "react": "~16.9.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-paper": "^3.7.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
