--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-navigation": "^6.4.0",
     "react-native-paper": "^3.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
